[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/move_wall.gd" type="Script" id=1]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 1, 1, 2 )

[node name="MoveWallInteractable" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30.1682, -7.2614, -1.90735e-06 )
script = ExtResource( 1 )
wall_node_path = NodePath("../../Geometry/RaisedRightWall")

[node name="InteractionArea" type="Area" parent="."]
collision_layer = 2048
collision_mask = 2

[node name="CollisionPolygon" type="CollisionPolygon" parent="InteractionArea"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
depth = 4.0
polygon = PoolVector2Array( -2, 0, 2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
[connection signal="body_entered" from="InteractionArea" to="." method="on_player_registered"]
[connection signal="body_exited" from="InteractionArea" to="." method="on_player_unregistered"]
